# apps/api/src/auth/dto/user.dto.ts
@@ -1,6 +1,6 @@
 import { ApiProperty } from '@nestjs/swagger';
 
-export class UserEntity {
+export class UserDto {
   @ApiProperty()
   id: string;
 
